# vidore-v3-generation

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml  vidore-generation.sh
configs/: example.yaml
tests/: test_bedrock_generation_handler.py  test_page_manifest.py  test_toc_detection.py  test_vidore_juicer_bedrock_usage.py  test_visual_document_descriptor.py  test_visual_summary_filter.py  test_visual_summary_pipeline.py
vidore_generation/: dtos.py  generation_schemas.py  main.py  utils.py
vidore_generation/filters/: summary_filter.py  visual_summary_filter.py
vidore_generation/generation_handlers/: api_generation_handler.py  bedrock_generation_handler.py  embeddings_test.py  factory.py  generation_handler.py  llm_generation_handler.py  vllm_generation_handler.py
vidore_generation/generators/: base_generator.py  corpus_describer.py  document_descriptor.py  judge.py  samplers.py  section_extractor.py  structs.py  summarizer.py  summary_combinator.py  visual_document_descriptor.py  visual_summarizer.py  vlm_query_generator.py
vidore_generation/page_filtering/: __init__.py  page_manifest.py  toc_detection.py
vidore_generation/pdf_parsing/: custom_markdown_serializer.py  extract_text_from_pdfs.py
vidore_generation/pipelines/: llm_pipeline.py  summary_pipeline.py  visual_summary_pipeline.py  vlm_pipeline.py
vidore_generation/prompts/: check_toc.j2  combination.j2  corpus_description.j2  document_description.j2  format_predictor.j2  judgment.j2  multi_section_query_generation.j2  page_quality_check.j2  pair_finding.j2  query_filter.j2  query_rephrase.j2  section_summary.j2  single_section_query_generation.j2  translation.j2  translation_correction.j2  translation_judgment.j2  triplet_finding.j2  type_predictor.j2  visual_document_description.j2  visual_section_summary.j2
vidore_generation/query_generation/: filter_queries.py  rephrase_queries.py
vidore_generation/query_generation/vidore_juicer/: generate_custom_queries.py  generate_queries.py  query_samplers.py  structs.py  utils.py
vidore_generation/query_generation/vidore_juicer/prompts/: query_doc.j2
vidore_generation/query_generation/vidore_juicer/prompts/judgment/: format_following.j2  persona_adaptation.j2  relevancy.j2  self_sufficiency.j2  type_following.j2
vidore_generation/vlm_generators/: vlm_generation_handler.py
