[project]
name = "vidore-generation"
description = "Create more difficult tasks to evaluate image retrieving models"
dynamic = ["version"]
authors = [{ name = "Antonio Loison", email = "antonio.loison@illuin.tech" }]
maintainers = [{ name = "Antonio Loison", email = "antonio.loison@illuin.tech" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "click>=8.1.8",
    "datasets>=4.8.2",
    "docling>=2.80.0",
    "litellm[caching]>=1.52.0,<1.70.0",
    "numpy>=1.26.4,<2.0.0",
    "pillow>=11.1.0",
    "torch==2.5.1",
    "transformers[torch]>=5.3.0",
    "rapidfuzz>=3.12.1",
    "anyascii>=0.3.2",
    "pypdfium2>=4.30.0",
    "sentence-transformers>=5.0.0",
    "scikit-learn>=1.7.0",
    "umap-learn>=0.5.3",
    "rapidfuzz>=3.12.1",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "deptry>=0.12.0",
    "pytest>=7.4.0",
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"

[project.scripts]
vidore-generation = "vidore_generation.main:cli"

[tool.setuptools]
zip-safe = false
platforms = ["any"]

[tool.setuptools.packages.find]
include = ["vidore_generation", "vidore_generation.*"]

[tool.setuptools.package-data]
vidore_generation = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code"]
exclude = ["docs/", "venv/", ".venv/"]
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true

[tool.coverage.run]
include = ["vidore_generation/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __repr__",
    "@abstractmethod",
]

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N"]
line-length = 88
exclude = ["experiments", "vidore_generation/deprecated"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s [%(filename)s:%(lineno)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
